Added gitignore for token

--- a/Bot/.env
+++ b/Bot/.env
@@ -1,3 +1,3 @@
-TOKEN = MTExNTMzNzQ4MTUzODI0ODg3NA.G9Nu0r.yCOSlwix74VJJrwUYqYIfKlvsLmvo2EwgMv1uU
+TOKEN = MTExNTMzNzQ4MTUzODI0ODg3NA.Gn--Gk._rKM6x4ke-st1U5M1tO5DiPAIl5F3YI1JVE1ds
 API_KEY = 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
 CHANNEL_ID = 1113466279416832071
